# ArcEngine

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Assets/Engine/Materials/: ArcDefault.mat
Engine/: CMakeLists.txt
Engine/Arc/Core/: Application.cpp  Application.h  Log.cpp  Log.h
Engine/Arc/Platform/: Window.cpp  Window.h
Engine/Arc/Renderer/: Renderer.cpp  Renderer.h
Engine/Arc/Renderer/Camera/: FreeCamera.cpp  FreeCamera.h
Engine/Arc/Renderer/Filament/: FilamentContext.cpp  FilamentContext.h
Engine/Arc/Renderer/Vulkan/: VulkanContext.cpp  VulkanContext.h
Game/: CMakeLists.txt
Game/Source/: Main.cpp
assets/: README.md
docs/: AdvancedRoadmap.md  Architecture.md
engine/: CMakeLists.txt
engine/include/Arc/: Application.hpp  AssetManager.hpp  Camera.hpp  Console.hpp  ECS.hpp  Engine.hpp  Input.hpp  Math.hpp  Memory.hpp  Mesh.hpp  Profiler.hpp  Renderer.hpp  Scene.hpp
engine/shaders/: fs_bloom_down.sc  fs_bloom_up.sc  fs_dof.sc  fs_linear_depth.sc  fs_luminance_adapt.sc  fs_luminance_down.sc  fs_mesh.sc  fs_motion_blur.sc  fs_post.sc  fs_scene_combine.sc  fs_sky.sc  fs_ssao.sc  fs_ssao_blur.sc  fs_ssgi.sc  fs_ssr.sc  fs_taa.sc  varying.def.sc  vs_mesh.sc  vs_shadow.sc  vs_sky.sc
engine/src/: Application.cpp  AssetManager.cpp  Camera.cpp  Console.cpp  Input.cpp  Memory.cpp  Renderer.cpp  Scene.cpp
game/: CMakeLists.txt
game/src/: SandboxGame.cpp
scripts/: build-run.ps1
